--- a/pyproject.toml
+++ b/pyproject.toml
@@ -1,5 +1,5 @@
 [build-system]
-requires = ["hatchling","aiohttp==3.9.3", "python-keycloak-async==2.17.1","asyncio-atexit==1.0.1", "requests"]
+requires = ["hatchling","aiohttp", "python-keycloak-async","asyncio-atexit", "requests"]
 build-backend = "hatchling.build"
 
 [project]
