Home assistant complain that python_keycloak_async make blocking call

--- a/pyproject.toml
+++ b/pyproject.toml
@@ -1,5 +1,5 @@
 [build-system]
-requires = ["hatchling","aiohttp", "python-keycloak-async","asyncio-atexit", "requests"]
+requires = ["hatchling","aiohttp", "python-keycloak","asyncio-atexit", "requests"]
 build-backend = "hatchling.build"
 
 [project]
