--- a/pyproject.toml
+++ b/pyproject.toml
@@ -11,7 +11,7 @@ authors = [
 description = "A unoficial async autodarts web api binding"
 readme = "README.md"
 requires-python = ">=3.8"
-requires = ["aiohttp", "python-keycloak-async","asyncio-atexit", "requests"]
+requires = ["aiohttp", "python-keycloak","asyncio-atexit", "requests"]
 classifiers = [
     "Programming Language :: Python :: 3",
     "License :: OSI Approved :: MIT License",
